# Prompt-Library

./: .gitattributes  .gitignore  README.md  analyze_prompts.py  clean_character_generator.py  clean_promptdexter.py  clean_prompthero.py  clean_prompts.py  extract_wildcards.py  next-steps.txt  pyproject.toml  retrofit_wildcards.py
data/: prompts.db
docs/: SESSION-HANDOFF.md  eval-core-100.md  skill-dream-factory-ingestion.md  skill-prompt-ingestion.md  skill-wildcard-extraction.md  style-variation-generation-plan.md
prompt_library/: __init__.py  cli.py  db.py  importer.py  renderer.py  wildcards.py
schemas/: sqlite.sql
seeds/: ai_handbook_cleaned.json  ai_handbook_import.json  bitburner-sd2_cleaned.json  bitburner-sd2_rejected.json  bitburner_cleaned.json  blaze20_import.json  character_generator_cleaned.json  civitai_cleaned.json  civitai_rejected.json  hoshizaki_book_cleaned.json  lexica_cleaned.json  midjourney_book_cleaned.json  promptdexter_cleaned.json  prompthero_cleaned.json  prompthero_rejected.json  prompts.example.json  sd30_import.json  sdxl_top40_import.json  wildcards.example.json
seeds/inbox/: 1000_ai_image_prompts_stable_diffusion_and_midjourney_ai_art_generation_part001_cleaned.json  manifest.json  (+24 more)
tools/: analyze_prompts.py  build_eval_sets.py  convert_ai_handbook_for_import.py  convert_and_archive.py  extract_ai_handbook.py  extract_blaze20.py  extract_hoshizaki.py  extract_sd30.py  extract_sdxl_top40.py  extract_wildcards.py  generate_missing_styles.py  import_prompt_zip.py  prepare_inbox.py  retrofit_wildcards.py
